--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,29 @@
-/* Insert styles here */
+@font-face {
+    font-family: 'Play';
+    src: url('./assets/fonts/FreePixel.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    font-size: 10px;
+}
+
+html {
+    width: 100%;
+    font-family: 'Play';
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    background-color: #2f3640;
+}
+
+canvas {
+    display: block;
+    margin: 10vh auto;
+    background-color: #000;
+}
