Added colour invaders

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Play';
-    src: url('./assets/fonts/FreePixel.ttf');
+    src: url('../fonts/FreePixel.ttf');
     font-weight: 400;
     font-style: normal;
 }
@@ -19,11 +19,19 @@ html {
 body {
     width: 100%;
     height: 100%;
-    background-color: #2f3640;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+#banner {
+    margin-top: 30px;
 }
 
 canvas {
     display: block;
-    margin: 10vh auto;
+    margin: 0vh auto;
     background-color: #000;
 }
